_Debugging CSS on main pages

--- a/views/pages/viewPayment.ejs
+++ b/views/pages/viewPayment.ejs
@@ -11,10 +11,14 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/sidebars.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/sidebars.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/home.css">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/form.css">
+
+
+
+
 
     <script src="js/main.js"></script>
 
@@ -191,55 +195,56 @@
 
                     <div class="formcontainer">
                         <form action="/newPayment/Added" method="post">
-                        <!-- <form action="/newPayment/Added" target="_blank" method="post"> -->
+                            <!-- <form action="/newPayment/Added" target="_blank" method="post"> -->
                             <div class="row g-3 gx-5">
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <h2>Payment Information</h2>
-                                            <label class="form-label">Payment ID</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentID"
+                                        <label class="form-label">Payment ID</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentID"
                                             value="<%=r.paymentID%>">
-                                            <br>
+                                        <br>
 
-                                            <label class="form-label">Payment Status</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentStatus"
-                                            value="<%=r.paymentStatus%>">
-                                            <br>
+                                        <label class="form-label">Payment Status</label>
+                                        <input type="text" class="form-control" id="inputClientName"
+                                            name="paymentStatus" value="<%=r.paymentStatus%>">
+                                        <br>
 
-                                            <label class="form-label">Payment Date</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentDate"
+                                        <label class="form-label">Payment Date</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentDate"
                                             value="<%=r.paymentDate%>">
-                                            <br>
+                                        <br>
 
-                                            <label for="inputClientName" class="form-label">Client Name</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="clientName"> 
-                                            <br>
+                                        <label for="inputClientName" class="form-label">Client Name</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="clientName">
+                                        <br>
 
-                                            <!-- 
+                                        <!-- 
                                             <select class="form-control" id="inputClientName" name="prdctID">
                                                 <option></option>
                                             </select>
                                             -->
 
-                                            
-                                            <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="invoiceID"
+
+                                        <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="invoiceID"
                                             value="<%=r.invoiceID%>">
-                                            <br>
+                                        <br>
 
-                                            <label for="inputPrice" class="form-label">Price</label>
-                                            <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
+                                        <label for="inputPrice" class="form-label">Price</label>
+                                        <input type="number" class="form-control" id="inputPrice" name="prdctPrice"
                                             min=0 value=0 step=0.01 placeholder=0.00>
-                                            <br>
+                                        <br>
 
-                                            <label for="inputInvoiceNumber" class="form-label">Amount</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="amnt" value="<%=r.amount%>">
-                                            <br>
+                                        <label for="inputInvoiceNumber" class="form-label">Amount</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="amnt"
+                                            value="<%=r.amount%>">
+                                        <br>
 
-                                            <label for="inputInvoiceNumber" class="form-label">Method</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="paymentMethod"
-                                            value="<%=r.method%>">
-                                            <br>
+                                        <label for="inputInvoiceNumber" class="form-label">Method</label>
+                                        <input type="text" class="form-control" id="inputPaymentName"
+                                            name="paymentMethod" value="<%=r.method%>">
+                                        <br>
                                     </div>
                                 </div>
 
@@ -249,7 +254,7 @@
                                         <label for="inputModelSeries" class="form-label">Model Series</label>
                                         <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
                                         <br>
-                                        <label id= "inputCategory" class="form-label">Category</label>
+                                        <label id="inputCategory" class="form-label">Category</label>
                                         <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
                                     </div>
                                 </div>
@@ -257,8 +262,8 @@
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <label for="inputNotes" class="form-label">Additional Notes</label>
-                                        <input type="textarea" class="form-control" id="inputNotes" name="paymentNotes" classname="Text1" 
-                                        cols="40" rows="5" value="<%=r.notes%>">
+                                        <input type="textarea" class="form-control" id="inputNotes" name="paymentNotes"
+                                            classname="Text1" cols="40" rows="5" value="<%=r.notes%>">
                                         <br>
                                     </div>
                                 </div>
@@ -271,7 +276,7 @@
                         </form>
                     </div>
                 </div>
-            <% }); %>
+                <% }); %>
         </div>
     </div>
 
