--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -292,7 +292,7 @@
                                     
                                     <!-- </form> -->
 
-                                    <form method="POST" action='/deleteclient/<%=r.clientid%>'>
+                                    <form method="POST" action='/deleteClient/<%=r.clientid%>'>
                                         <input type="submit" value="Delete Client" class="btn btn-secondary"></input>
                                     </form>
                                     <!-- </form> -->
