--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -13078,20 +13078,19 @@
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
 
+                                    <!-- Sus EJS code changed it back to my logic (Nick)-->
                                     <form class="form-inline" action="/updateProductInfo/<%=r.productid%>"
                                         method="POST">
-                                        <!-- <input value="Update" type="submit" class="btn btn-secondary"> -->
-                                        
-                                        <button class="btn btn-secondary" type="submit"
-                                            formaction="/updateProductInfo/<%=r.productid%>">Update</button>
-                                            
-                                        <button class="btn btn-secondary" type="submit"
-                                            formaction="/deleteProductInfo/<%=r.productid%>">Delete</button>
-
-                                        <a class="btn btn-secondary" href="/productspage">Return</a>
-
-
+                                        <input class="btn btn-secondary" type="submit" value="Update">
                                     </form>
+
+                                    <form class="form-inline" action="/deleteProductInfo/<%=r.productid%>"
+                                        method="POST">> 
+                                        <input class="btn btn-secondary" type="submit" value="Delete">
+                                    </form>
+
+                                    <a class="btn btn-secondary" href="/productspage">Return</a>
+
                                     <!-- </form> -->
                                 </div>
                                 <!-- </form> -->
