pushing what i got

--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -13085,7 +13085,7 @@
                                     </form>
 
                                     <form class="form-inline" action="/deleteProductInfo/<%=r.productid%>"
-                                        method="POST">> 
+                                        method="POST">
                                         <input class="btn btn-secondary" type="submit" value="Delete">
                                     </form>
 
