--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -215,7 +215,7 @@
                                         <br> -->
 
                                         <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
-                                        <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">>
+                                        <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
                                             <!-- <% for(var i=0; i < r.length; i++) { %> -->
                                             <% rows.forEach(function(r) { %>
                                             <option>
