--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -214,17 +214,17 @@
                                         <input type="text" class="form-control" id="inputClientName" name="clientName"> 
                                         <br> -->
 
-                                        <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
+                                        <!-- <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
                                         <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
-                                            <!-- <% for(var i=0; i < r.length; i++) { %> -->
+                                            <% for(var i=0; i < r.length; i++) { %>
                                             <% rows.forEach(function(r) { %>
                                             <option>
                                                 <%= r.invoiceid %> , <%= r.clientname %>
                                             </option>
-                                            <!-- <%}%> -->
+                                            <%}%>
                                             <% }); %>
                                         </select>
-                                        <br>
+                                        <br> -->
                                        
                                         
                                         <!-- <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
