--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -188,19 +188,25 @@
 
             <!-- Main content section, will be different for all the pages -->
             <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
-                <h1 class="display-1">New Clients</h1>
+                <h1 class="display-1">New Payment</h1>
 
                 <div class="formcontainer">
-                    <form action="/newClient/Added" method="post">
+                    <form action="/newPayment/Added" method="post">
                     <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
-                                <h2>Client Information</h2>
-                                <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
-                                <input type="text" class="form-control" id="inputClientName" name="inClName">
+                                <h2>Payment Information</h2>
+                                <label for="inputpaymentID" class="form-label">Payment ID</label>
+                                <input type="text" class="form-control" id="inputpaymentID" name="inPID">
                                 <br>
-                                <label for="inputClientID" class="form-label">Client ID</label>
-                                <input type="text" class="form-control" id="inputClientID" name="inClID">
+                                <label for="inputpaymentStatus" class="form-label">Payment Status</label>
+                                <input type="text" class="form-control" id="inputpaymentStatus" name="inPayStatus">
+                                <br>
+                                <label for="inputPaymentDate" class="form-label">Payment Date</label>
+                                <input type="text" class="form-control" id="inputPaymentDate" name="inPayDate">
+                                <br>
+                                <label for="inputAmount" class="form-label">Amount</label>
+                                <input type="number" class="form-control" id="inputAmount" name="inAmnt">
 
 
                             </div>
