--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -207,48 +207,25 @@
                                 <br>
                                 <label for="inputAmount" class="form-label">Amount</label>
                                 <input type="number" class="form-control" id="inputAmount" name="inAmnt">
-
+                                <br>
+                                <label for="inputMethod" class="form-label">Method</label>
+                                <input type="text" class="form-control" id="inputMethod" name="inMethod" placeholder="VISA">
 
                             </div>
                             <div class="col-md-6">
-                                <h2>Contact Information</h2>
-                                <label for="inputContactName" class="form-label">Contact Name</label>
-                                <input type="text" class="form-control" id="inputContactName" name="inConName">
+                                <!-- <h2>Contact Information</h2> -->
+                                <label for="inputModelSeries" class="form-label">Model Series</label>
+                                <input type="text" class="form-control" id="inputModelSeries" name="inModelSeries">
                                 <br>
-                                <label for="inputEmail" class="form-label">Email-Address</label>
-                                <input type="email" class="form-control" id="inputEmail" name="inEmail" placeholder="xyz@gmail.com">
-                                <br>
-                                <div class="row g-3 gx-5">
-                                    <div class="col-4">
-                                        <label for="inputAreaCode" class="form-label">Area Code</label>
-                                        <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode">
-                                    </div>
-                                    <div class="col-8">
-                                        <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum">
-
-                                    </div>
-                                </div>
-                                <br>
-                                <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
-                                <br>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio1" value="EMAIL">
-                                    <label class="form-check-label" for="inlineRadio1">Email</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio2" value="PHONE">
-                                    <label class="form-check-label" for="inlineRadio2">Phone</label>
-                                </div>
+                                <label id= "inputCategory" class="form-label">Category</label>
+                                <input type="text" class="form-control" id="inputModelSeries" name="inModelSeries" placeholder="Office Supplies">
                             </div>
 
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
                                     <!-- <h2>Billing Address</h2> -->
-                                    <label for="billingAddress" class="form-label">Billing Address</label>
-                                    <input type="textarea" class="form-control" id="billingAddress" name="inAddr" classname="Text1" 
+                                    <label for="inputNotes" class="form-label">Additional Notes</label>
+                                    <input type="textarea" class="form-control" id="inputNotes" name="inNotes" classname="Text1" 
                                     cols="40" rows="5">
                                     <!-- </textarea> -->
                                     <br>
