--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -214,6 +214,17 @@
                             </div>
                             <div class="col-md-6">
                                 <!-- <h2>Contact Information</h2> -->
+                                <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
+                                <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
+                                    <!-- <% for(var i=0; i < r.length; i++) { %> -->
+                                    <% rows.forEach(function(r) { %>
+                                    <option>
+                                        <%= r.invoiceid %> , <%= r.clientname %>
+                                    </option>
+                                    <!-- <%}%> -->
+                                    <% }); %>
+                                </select>
+                                <br>
                                 <label for="inputModelSeries" class="form-label">Model Series</label>
                                 <input type="text" class="form-control" id="inputModelSeries" name="inModelSeries">
                                 <br>
