--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -216,13 +216,13 @@
                                 <!-- <h2>Contact Information</h2> -->
                                 <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
                                 <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
-                                    <!-- <% for(var i=0; i < r.length; i++) { %> -->
-                                    <% rows.forEach(function(r) { %>
+                                    <% for(var i=0; i < rows.length; i++) { %>
+                                    <!-- <% rows.forEach(function(r) { %> -->
                                     <option>
-                                        <%= r.invoiceid %> , <%= r.clientname %>
+                                        <%= rows[i].rows.invoiceid %>
                                     </option>
-                                    <!-- <%}%> -->
-                                    <% }); %>
+                                    <%}%>
+                                    <!-- <% }); %> -->
                                 </select>
                                 <br>
                                 <label for="inputModelSeries" class="form-label">Model Series</label>
