--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -218,7 +218,7 @@
                                 <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
                                     <% for(var i=0; i < rows.length; i++) { %>
                                     <!-- <% rows.forEach(function(r) { %> -->
-                                    <option>
+                                    <option
                                         <%= rows[i].rows.invoiceid %>
                                     </option>
                                     <%}%>
