--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -216,12 +216,12 @@
                                 <!-- <h2>Contact Information</h2> -->
                                 <label for="inputInvoiceID_ClientName" class="form-label">Invoice ID</label>
                                 <select class="form-control" id="inputInvoiceID_ClientName" name="invoiceID_ClientName" value="">
-                                    <% for(var i=0; i < rows.length; i++) { %>
+                                    <% for(var i=0; i<rows.length; i++) {%>
                                     <!-- <% rows.forEach(function(r) { %> -->
-                                    <option
+                                    <option value="<%= rows[i].invoiceid %>">
                                         <%= rows[i].rows.invoiceid %>
                                     </option>
-                                    <%}%>
+                                    <% } %>
                                     <!-- <% }); %> -->
                                 </select>
                                 <br>
