--- a/views/pages/generatedInvoice.ejs
+++ b/views/pages/generatedInvoice.ejs
@@ -12810,26 +12810,18 @@
 
 
             </h1>
-            <%rows.forEach(function(r) {%>
-                <div class="page-tools">
-                    <small class="page-info">
 
-                        Invoice ID: <%= r.invoiceid %>
-                            <br>
+            <div class="page-tools">
+                <small class="page-info">
 
-                            <div class="action-buttons">
-                                <a class="btn btn-secondary" href="#" data-title="Print">
-                                    <i class="mr-1 fa fa-print text-120 w-2"></i>
-                                    Print
-                                </a>
-                                <a class="btn btn-secondary" href="#" data-title="PDF">
-                                    <i class="fa fa-file-pdf-o text-120 w-2"></i>
-                                    Export
-                                </a>
-                            </div>
-                    </small>
-                </div>
-                <% }); %>
+                    <h3>Invoice ID: <%= rows[0].invoiceid %>
+                    </h3>
+                    <br>
+
+
+                </small>
+            </div>
+
         </div>
 
         <div class="container px-0">
@@ -12839,104 +12831,91 @@
                     <!-- .row -->
 
                     <hr class="row brc-default-l1 mx-n1 mb-4" />
-                    <%rows.forEach(function(r) {%>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div>
-                                    <span class="text-sm text-grey-m2 align-middle">To:</span>
-                                    <span class="text-600 text-110 text-blue align-middle">
-                                        <%= r.clientname %>
-                                    </span>
-                                </div>
-                                <div class="text-grey-m2">
-                                    <div class="my-1">
-                                        <%= r.email %>
-                                    </div>
 
-                                    <div class="my-1"><i class="fa fa-phone fa-flip-horizontal text-secondary"></i> <b
-                                            class="text-600">
-                                            <%= r.phone %>
-                                        </b></div>
-                                </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div>
+                                <span class="text-sm text-grey-m2 align-middle">To:</span>
+                                <span class="text-600 text-110 text-blue align-middle">
+                                    <%= rows[0].clientname %>
+                                </span>
                             </div>
-                            <!-- /.col -->
-
-                            <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
-                                <hr class="d-sm-none" />
-                                <div class="text-grey-m2">
-                                    <div class="mt-1 mb-2 text-secondary-m1 text-600 text-125">
-                                        Invoice
-                                    </div>
-
-                                    <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
-                                            class="text-600 text-90">ID:</span> #<%= r.invoiceid %>
-                                    </div>
-
-                                    <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
-                                            class="text-600 text-90">Issue Date:</span>
-                                        <%= r.invoicedate %>
-                                    </div>
-
-                                    <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
-                                            class="text-600 text-90">Status:</span>
-                                        <%= r.status %>
-                                    </div>
+                            <div class="text-grey-m2">
+                                <div class="my-1">
+                                    <%= rows[0].email %>
                                 </div>
+
+                                <div class="my-1"><i class="fa fa-phone fa-flip-horizontal text-secondary"></i> <b
+                                        class="text-600">
+                                        <%= rows[0].phone %>
+                                    </b></div>
                             </div>
-                            <!-- /.col -->
                         </div>
-                        <% }); %>
+                        <!-- /.col -->
 
-                            <%rows.forEach(function(r) {%>
-                                <div class="mt-4">
-                                    <div class="row text-600 text-white bgc-default-tp1 py-25">
-                                        <div class="d-none d-sm-block col-1">#</div>
-                                        <div class="col-9 col-sm-5">Description</div>
-                                        <div class="d-none d-sm-block col-4 col-sm-2">Qty</div>
-                                        <div class="d-none d-sm-block col-sm-2">Unit Price</div>
-                                        <div class="col-2">Amount</div>
+                        <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
+                            <hr class="d-sm-none" />
+                            <div class="text-grey-m2">
+                                <div class="mt-1 mb-2 text-secondary-m1 text-600 text-125">
+                                    Invoice
+                                </div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
+                                        class="text-600 text-90">ID:</span> #<%= rows[0].invoiceid %>
+                                </div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
+                                        class="text-600 text-90">Issue Date:</span>
+                                    <%= rows[0].invoicedate %>
+                                </div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span
+                                        class="text-600 text-90">Status:</span>
+                                    <%= rows[0].status %>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+
+
+
+                    <div class="mt-4">
+                        <div class="row text-600 text-white bgc-default-tp1 py-25">
+                            <div class="d-none d-sm-block col-1">#</div>
+                            <div class="col-9 col-sm-5">Description</div>
+                            <div class="d-none d-sm-block col-4 col-sm-2">Qty</div>
+                            <div class="d-none d-sm-block col-sm-2">Unit Price</div>
+                            <div class="col-2">Amount</div>
+                        </div>
+
+                        <%rows.forEach(function(r) {%>
+
+                            <div class="text-95 text-secondary-d3">
+                                <div class="row mb-2 mb-sm-0 py-25">
+                                    <div class="d-none d-sm-block col-1">1</div>
+                                    <div class="col-9 col-sm-5">
+                                        <%= r.productid %>
                                     </div>
-
-                                    <div class="text-95 text-secondary-d3">
-                                        <div class="row mb-2 mb-sm-0 py-25">
-                                            <div class="d-none d-sm-block col-1">1</div>
-                                            <div class="col-9 col-sm-5">
-                                                <%= r.productid %>
-                                            </div>
-                                            <div class="d-none d-sm-block col-2">2</div>
-                                            <div class="d-none d-sm-block col-2 text-95">$10</div>
-                                            <div class="col-2 text-secondary-d2">$20</div>
-                                        </div>
-
-                                        <div class="row mb-2 mb-sm-0 py-25 bgc-default-l4">
-                                            <div class="d-none d-sm-block col-1"></div>
-                                            <div class="col-9 col-sm-5">Web hosting</div>
-                                            <div class="d-none d-sm-block col-2">1</div>
-                                            <div class="d-none d-sm-block col-2 text-95">$15</div>
-                                            <div class="col-2 text-secondary-d2">$15</div>
-                                        </div>
-
-                                        <div class="row mb-2 mb-sm-0 py-25">
-                                            <div class="d-none d-sm-block col-1">3</div>
-                                            <div class="col-9 col-sm-5">Software development</div>
-                                            <div class="d-none d-sm-block col-2">--</div>
-                                            <div class="d-none d-sm-block col-2 text-95">$1,000</div>
-                                            <div class="col-2 text-secondary-d2">$1,000</div>
-                                        </div>
-
-                                        <div class="row mb-2 mb-sm-0 py-25 bgc-default-l4">
-                                            <div class="d-none d-sm-block col-1">4</div>
-                                            <div class="col-9 col-sm-5">Consulting</div>
-                                            <div class="d-none d-sm-block col-2">1 Year</div>
-                                            <div class="d-none d-sm-block col-2 text-95">$500</div>
-                                            <div class="col-2 text-secondary-d2">$500</div>
-                                        </div>
+                                    <div class="d-none d-sm-block col-2">
+                                        <%= r.quantity %>
                                     </div>
+                                    <div class="d-none d-sm-block col-2 text-95">
+                                        <%= r.price %>
+                                    </div>
+                                    <div class="col-2 text-secondary-d2">
+                                        <%= r.totalprice_row %>
+                                    </div>
+                                </div>
 
-                                    <div class="row border-b-2 brc-default-l2"></div>
 
-                                    <!-- or use a table instead -->
-                                    <!--
+                            </div>
+                            <% }); %>
+
+
+
+                                <!-- or use a table instead -->
+                                <!--
                                         <div class="table-responsive">
                                             <table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1">
                                                 <thead class="bg-none bgc-default-tp1">
@@ -12963,49 +12942,55 @@
                                         </div>
                                         -->
 
-                                    <div class="row mt-3">
-                                        <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0 fillable">
-                                            NOTES:
-                                        </div>
-
-                                        <div class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last">
-                                            <div class="row my-2">
-                                                <div class="col-7 text-right">
-                                                    SubTotal
-                                                </div>
-                                                <div class="col-5">
-                                                    <span class="text-120 text-secondary-d1">$2,250</span>
-                                                </div>
-                                            </div>
-
-                                            <div class="row my-2">
-                                                <div class="col-7 text-right">
-                                                    Tax (10%)
-                                                </div>
-                                                <div class="col-5">
-                                                    <span class="text-110 text-secondary-d1">$225</span>
-                                                </div>
-                                            </div>
-
-                                            <div class="row my-2 align-items-center bgc-primary-l3 p-2">
-                                                <div class="col-7 text-right">
-                                                    Total Amount
-                                                </div>
-                                                <div class="col-5">
-                                                    <span class="text-150 text-success-d3 opacity-2">$2,475</span>
-                                                </div>
-                                            </div>
-                                        </div>
+                                <div class="row mt-3">
+                                    <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0 fillable">
+                                        NOTES:
                                     </div>
 
-                                    <hr />
+                                    <div class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last">
+                                        <div class="row my-2">
+                                            <div class="col-7 text-right">
+                                                SubTotal
+                                            </div>
+                                            <div class="col-5">
+                                                <span class="text-120 text-secondary-d1">
+                                                    <%= rows[0].subtotal %>
+                                                </span>
+                                            </div>
+                                        </div>
 
-                                    <div id="footer">
-                                        <span class="text-secondary-d1 text-105">Thank you for your business</span>
+                                        <div class="row my-2">
+                                            <div class="col-7 text-right">
+                                                Discount:
+                                            </div>
+                                            <div class="col-5">
+                                                <span class="text-110 text-secondary-d1">
+                                                    <%= rows[0].discount %>
+                                                </span>
+                                            </div>
+                                        </div>
 
+                                        <div class="row my-2 align-items-center bgc-primary-l3 p-2">
+                                            <div class="col-7 text-right">
+                                                Total Amount
+                                            </div>
+                                            <div class="col-5">
+                                                <span class="text-150 text-success-d3 opacity-2">
+                                                    <%= rows[0].totalamount %>
+                                                </span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <% }); %>
+
+                                <hr />
+
+                                <div id="footer">
+                                    <span class="text-secondary-d1 text-105">Thank you for your business</span>
+
+                                </div>
+                    </div>
+
                 </div>
             </div>
         </div>
