--- a/views/pages/editPayment.ejs
+++ b/views/pages/editPayment.ejs
@@ -118,16 +118,7 @@
 
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <li>
-                                <form method="GET">
-                                    <a href="/dashboard" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#speedometer2" />
-                                        </svg>
-                                        Dashboard
-                                    </a>
-                                </form>
-                            </li>
+
 
                             <li class="nav-item">
                                 <form method="GET">
@@ -191,55 +182,56 @@
 
                     <div class="formcontainer">
                         <form action="/newPayment/Added" method="post">
-                        <!-- <form action="/newPayment/Added" target="_blank" method="post"> -->
+                            <!-- <form action="/newPayment/Added" target="_blank" method="post"> -->
                             <div class="row g-3 gx-5">
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <h2>Payment Information</h2>
-                                            <label class="form-label">Payment ID</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentID"
+                                        <label class="form-label">Payment ID</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentID"
                                             placeholder="<%=r.paymentID%>">
-                                            <br>
+                                        <br>
 
-                                            <label class="form-label">Payment Status</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentStatus"
-                                            placeholder="<%=r.paymentStatus%>">
-                                            <br>
+                                        <label class="form-label">Payment Status</label>
+                                        <input type="text" class="form-control" id="inputClientName"
+                                            name="paymentStatus" placeholder="<%=r.paymentStatus%>">
+                                        <br>
 
-                                            <label class="form-label">Payment Date</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="paymentDate"
+                                        <label class="form-label">Payment Date</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="paymentDate"
                                             placeholder="<%=r.paymentDate%>">
-                                            <br>
+                                        <br>
 
-                                            <label for="inputClientName" class="form-label">Client Name</label>
-                                            <input type="text" class="form-control" id="inputClientName" name="clientName"> 
-                                            <br>
+                                        <label for="inputClientName" class="form-label">Client Name</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="clientName">
+                                        <br>
 
-                                            <!-- 
+                                        <!-- 
                                             <select class="form-control" id="inputClientName" name="prdctID">
                                                 <option></option>
                                             </select>
                                             -->
 
-                                            
-                                            <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="invoiceID"
+
+                                        <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="invoiceID"
                                             placeholder="<%=r.invoiceID%>">
-                                            <br>
+                                        <br>
 
-                                            <label for="inputPrice" class="form-label">Price</label>
-                                            <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
+                                        <label for="inputPrice" class="form-label">Price</label>
+                                        <input type="number" class="form-control" id="inputPrice" name="prdctPrice"
                                             min=0 value=0 step=0.01 placeholder=0.00>
-                                            <br>
+                                        <br>
 
-                                            <label for="inputInvoiceNumber" class="form-label">Amount</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="amnt" placeholder="<%=r.amount%>">
-                                            <br>
+                                        <label for="inputInvoiceNumber" class="form-label">Amount</label>
+                                        <input type="text" class="form-control" id="inputPaymentName" name="amnt"
+                                            placeholder="<%=r.amount%>">
+                                        <br>
 
-                                            <label for="inputInvoiceNumber" class="form-label">Method</label>
-                                            <input type="text" class="form-control" id="inputPaymentName" name="paymentMethod"
-                                            placeholder="<%=r.method%>">
-                                            <br>
+                                        <label for="inputInvoiceNumber" class="form-label">Method</label>
+                                        <input type="text" class="form-control" id="inputPaymentName"
+                                            name="paymentMethod" placeholder="<%=r.method%>">
+                                        <br>
                                     </div>
                                 </div>
 
@@ -249,7 +241,7 @@
                                         <label for="inputModelSeries" class="form-label">Model Series</label>
                                         <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
                                         <br>
-                                        <label id= "inputCategory" class="form-label">Category</label>
+                                        <label id="inputCategory" class="form-label">Category</label>
                                         <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
                                     </div>
                                 </div>
@@ -257,8 +249,8 @@
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <label for="inputNotes" class="form-label">Additional Notes</label>
-                                        <input type="textarea" class="form-control" id="inputNotes" name="paymentNotes" classname="Text1" 
-                                        cols="40" rows="5" placeholder="<%=r.notes%>">
+                                        <input type="textarea" class="form-control" id="inputNotes" name="paymentNotes"
+                                            classname="Text1" cols="40" rows="5" placeholder="<%=r.notes%>">
                                         <br>
                                     </div>
                                 </div>
@@ -271,7 +263,7 @@
                         </form>
                     </div>
                 </div>
-            <% }); %>
+                <% }); %>
         </div>
     </div>
 
