--- a/views/pages/newProduct.ejs
+++ b/views/pages/newProduct.ejs
@@ -118,16 +118,7 @@
 
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <li>
-                                <form method="GET">
-                                    <a href="/dashboard" class="nav-link text-white">
-                                        <svg class="bi me-2" width="16" height="16">
-                                            <use xlink:href="#speedometer2" />
-                                        </svg>
-                                        Dashboard
-                                    </a>
-                                </form>
-                            </li>
+
 
                             <li class="nav-item">
                                 <form method="GET">
@@ -192,37 +183,37 @@
 
                 <div class="formcontainer">
                     <form action="/newProduct/Added" method="post">
-                    <!-- <form action="/newProduct/Added" target="_blank" method="post"> -->
+                        <!-- <form action="/newProduct/Added" target="_blank" method="post"> -->
                         <div class="row g-3 gx-5">
                             <div class="col-md-6">
                                 <h2>Product Information</h2>
-                                    <label for="inputProductID" class="form-label">Product ID</label>
-                                    <input type="text" class="form-control" id="inputProductID" name="prdctID">
-                                    <!-- <br>
+                                <label for="inputProductID" class="form-label">Product ID</label>
+                                <input type="text" class="form-control" id="inputProductID" name="prdctID">
+                                <!-- <br>
                                     <label for="inputModelSeries" class="form-label">Model Series</label>
                                     <input type="text" class="form-control" id="inputModelSeries" name="prdctModel"> -->
-                                    <br>
-                                    <label for="inputProductName" class="form-label">Product Name</label>
-                                    <input type="text" class="form-control" id="inputProductName" name="prdctName">
-                                    <br>
-                                    <label for="inputPrice" class="form-label">Price</label>
-                                    <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
-                                    min=0 value=0 step=0.01 placeholder=0.00>
+                                <br>
+                                <label for="inputProductName" class="form-label">Product Name</label>
+                                <input type="text" class="form-control" id="inputProductName" name="prdctName">
+                                <br>
+                                <label for="inputPrice" class="form-label">Price</label>
+                                <input type="number" class="form-control" id="inputPrice" name="prdctPrice" min=0
+                                    value=0 step=0.01 placeholder=0.00>
                             </div>
 
                             <div class="col-md-6">
                                 <label for="inputModelSeries" class="form-label">Model Series</label>
                                 <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
                                 <br>
-                                <label id= "inputCategory" class="form-label">Category</label>
+                                <label id="inputCategory" class="form-label">Category</label>
                                 <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
                             </div>
 
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
                                     <label for="inputDescription" class="form-label">Description</label>
-                                    <input type="textarea" class="form-control" id="inputDescription" name="prdctDesc" classname="Text1" 
-                                    cols="40" rows="5">
+                                    <input type="textarea" class="form-control" id="inputDescription" name="prdctDesc"
+                                        classname="Text1" cols="40" rows="5">
                                     <br>
                                 </div>
                             </div>
@@ -230,7 +221,8 @@
                             <div class="col-12" style="text-align: center;">
 
                                 <form method="POST" action="/newProduct/Added">
-                                    <input id="addProduct" type="submit" class="btn btn-secondary" value="Add Product Info">
+                                    <input id="addProduct" type="submit" class="btn btn-secondary"
+                                        value="Add Product Info">
                                 </form>
 
                                 <a class="btn btn-secondary" href="/productspage">return to product page</a>
